# ParallelTasks

./: CMakeLists.txt  File.cpp  File.h  Process.cpp  Process.h  main.cpp
Debug/: ParallelTasks
Debug/OK/: NASA-iPSC-1993-2.1-cln.swf  test1.txt
